// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webpack integration works with edgecase-comment-has-backtick configuration: edgecase-comment-has-backtick 1`] = `
"(window[\\"webpackJsonp\\"] = window[\\"webpackJsonp\\"] || []).push([[\\"unit_test\\"],{

/***/ \\"./src/index.js\\":
/*!**********************!*\\\\
  !*** ./src/index.js ***!
  \\\\**********************/
/*! no exports provided */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
eval(\\"__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _panel_js__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./panel.js */ \\\\\\"./src/panel.js\\\\\\");
//# sourceURL=webpack:///./src/index.js?\\");

/***/ }),

/***/ \\"./src/panel.js\\":
/*!**********************!*\\\\
  !*** ./src/panel.js ***!
  \\\\**********************/
/*! no exports provided */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
eval(\\"__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _style_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./style.css */ \\\\\\"./src/style.css\\\\\\");
class Panel extends HTMLElement {
    constructor() {
        super();
        this.attachShadow({mode: \\\\\\"open\\\\\\"});
        this.shadowRoot.innerHTML = \`<div class=\\\\\\"panel\\\\\\">Panel CMP</div>\`;
        this.shadowRoot.adoptedStyleSheets = [_style_css__WEBPACK_IMPORTED_MODULE_0__[\\\\\\"default\\\\\\"]]
    }
}
if (customElements.get('ata-panel') == null) {
    customElements.define('ata-panel', Panel);
}
//# sourceURL=webpack:///./src/panel.js?\\");

/***/ }),

/***/ \\"./src/style.css\\":
/*!***********************!*\\\\
  !*** ./src/style.css ***!
  \\\\***********************/
/*! exports provided: default */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
eval(\\"__webpack_require__.r(__webpack_exports__);
const styleSheet = new CSSStyleSheet(); styleSheet.replaceSync(\`.btn {
    background-color: blue;
}
.panel {
    background-color: orange;
    border-style: solid;
}
.white-listed {
    background-color: white;
}
/*
 * Discovered when adding tailwind
 */
/**
 * Render the \\\\\\\\\`main\\\\\\\\\` element consistently in IE.
 */
\`); /* harmony default export */ __webpack_exports__[\\\\\\"default\\\\\\"] = (styleSheet);
//# sourceURL=webpack:///./src/style.css?\\");

/***/ })

},[[\\"./src/index.js\\",\\"runtime\\"]]]);"
`;

exports[`Webpack integration works with multiple-with-postcss-loader configuration: multiple-with-postcss-loader 1`] = `
"(window[\\"webpackJsonp\\"] = window[\\"webpackJsonp\\"] || []).push([[\\"unit_test\\"],{

/***/ \\"./src/form.js\\":
/*!*********************!*\\\\
  !*** ./src/form.js ***!
  \\\\*********************/
/*! no exports provided */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
eval(\\"__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _style_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./style.css */ \\\\\\"./src/style.css\\\\\\");
class Form extends HTMLElement {
    constructor() {
        super();
        this.attachShadow({mode: \\\\\\"open\\\\\\"});
        this.shadowRoot.innerHTML = \`<div class=\\\\\\"form\\\\\\"><form>Form CMP</form></div>\`;
        this.shadowRoot.adoptedStyleSheets = [_style_css__WEBPACK_IMPORTED_MODULE_0__[\\\\\\"default\\\\\\"]]
    }
}
if (customElements.get('ata-panel') == null) {
    customElements.define('ata-panel', Form);
}
//# sourceURL=webpack:///./src/form.js?\\");

/***/ }),

/***/ \\"./src/index.js\\":
/*!**********************!*\\\\
  !*** ./src/index.js ***!
  \\\\**********************/
/*! no exports provided */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
eval(\\"__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _panel__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./panel */ \\\\\\"./src/panel.js\\\\\\");
/* harmony import */ var _form__WEBPACK_IMPORTED_MODULE_1__ = __webpack_require__(/*! ./form */ \\\\\\"./src/form.js\\\\\\");
//# sourceURL=webpack:///./src/index.js?\\");

/***/ }),

/***/ \\"./src/panel.js\\":
/*!**********************!*\\\\
  !*** ./src/panel.js ***!
  \\\\**********************/
/*! no exports provided */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
eval(\\"__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _style_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./style.css */ \\\\\\"./src/style.css\\\\\\");
class Panel extends HTMLElement {
    constructor() {
        super();
        this.attachShadow({mode: \\\\\\"open\\\\\\"});
        this.shadowRoot.innerHTML = \`<div class=\\\\\\"panel\\\\\\">Panel CMP</div>\`;
        this.shadowRoot.adoptedStyleSheets = [_style_css__WEBPACK_IMPORTED_MODULE_0__[\\\\\\"default\\\\\\"]]
    }
}
if (customElements.get('ata-form') == null) {
    customElements.define('ata-form', Panel);
}
//# sourceURL=webpack:///./src/panel.js?\\");

/***/ }),

/***/ \\"./src/style.css\\":
/*!***********************!*\\\\
  !*** ./src/style.css ***!
  \\\\***********************/
/*! exports provided: default */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
eval(\\"__webpack_require__.r(__webpack_exports__);
const styleSheet = new CSSStyleSheet(); styleSheet.replaceSync(\`.panel {
    background-color: orange;
    border-style: solid;
}
.white-listed {
    background-color: white;
}
form {
    padding-left: 1em;
}
\`); /* harmony default export */ __webpack_exports__[\\\\\\"default\\\\\\"] = (styleSheet);
//# sourceURL=webpack:///./src/style.css?\\");

/***/ })

},[[\\"./src/index.js\\",\\"runtime\\"]]]);"
`;

exports[`Webpack integration works with simple configuration: simple 1`] = `
"(window[\\"webpackJsonp\\"] = window[\\"webpackJsonp\\"] || []).push([[\\"unit_test\\"],{

/***/ \\"./src/index.js\\":
/*!**********************!*\\\\
  !*** ./src/index.js ***!
  \\\\**********************/
/*! no exports provided */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
eval(\\"__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _panel_js__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./panel.js */ \\\\\\"./src/panel.js\\\\\\");
//# sourceURL=webpack:///./src/index.js?\\");

/***/ }),

/***/ \\"./src/panel.js\\":
/*!**********************!*\\\\
  !*** ./src/panel.js ***!
  \\\\**********************/
/*! no exports provided */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
eval(\\"__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _style_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./style.css */ \\\\\\"./src/style.css\\\\\\");
class Panel extends HTMLElement {
    constructor() {
        super();
        this.attachShadow({mode: \\\\\\"open\\\\\\"});
        this.shadowRoot.innerHTML = \`<div class=\\\\\\"panel\\\\\\">Panel CMP</div>\`;
        this.shadowRoot.adoptedStyleSheets = [_style_css__WEBPACK_IMPORTED_MODULE_0__[\\\\\\"default\\\\\\"]]
    }
}
if (customElements.get('ata-panel') == null) {
    customElements.define('ata-panel', Panel);
}
//# sourceURL=webpack:///./src/panel.js?\\");

/***/ }),

/***/ \\"./src/style.css\\":
/*!***********************!*\\\\
  !*** ./src/style.css ***!
  \\\\***********************/
/*! exports provided: default */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
eval(\\"__webpack_require__.r(__webpack_exports__);
const styleSheet = new CSSStyleSheet(); styleSheet.replaceSync(\`.btn {
    background-color: blue;
}
.panel {
    background-color: orange;
    border-style: solid;
}
.white-listed {
    background-color: white;
}
.\\\\\\\\\\\\\\\\32xl\\\\\\\\:ring-offset-white {
    --tw-ring-offset-color: #fff;
}
\`); /* harmony default export */ __webpack_exports__[\\\\\\"default\\\\\\"] = (styleSheet);
//# sourceURL=webpack:///./src/style.css?\\");

/***/ })

},[[\\"./src/index.js\\",\\"runtime\\"]]]);"
`;

exports[`Webpack integration works with simple-with-purge configuration: simple-with-purge 1`] = `
"(window[\\"webpackJsonp\\"] = window[\\"webpackJsonp\\"] || []).push([[\\"unit_test\\"],{

/***/ \\"./src/index.js\\":
/*!**********************!*\\\\
  !*** ./src/index.js ***!
  \\\\**********************/
/*! no exports provided */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
eval(\\"__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _panel_js__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./panel.js */ \\\\\\"./src/panel.js\\\\\\");
//# sourceURL=webpack:///./src/index.js?\\");

/***/ }),

/***/ \\"./src/panel.js\\":
/*!**********************!*\\\\
  !*** ./src/panel.js ***!
  \\\\**********************/
/*! no exports provided */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
eval(\\"__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _style_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./style.css */ \\\\\\"./src/style.css\\\\\\");
class Panel extends HTMLElement {
    constructor() {
        super();
        this.attachShadow({mode: \\\\\\"open\\\\\\"});
        this.shadowRoot.innerHTML = \`<div class=\\\\\\"panel\\\\\\">Panel CMP</div>\`;
        this.shadowRoot.adoptedStyleSheets = [_style_css__WEBPACK_IMPORTED_MODULE_0__[\\\\\\"default\\\\\\"]]
    }
}
if (customElements.get('ata-panel') == null) {
    customElements.define('ata-panel', Panel);
}
//# sourceURL=webpack:///./src/panel.js?\\");

/***/ }),

/***/ \\"./src/style.css\\":
/*!***********************!*\\\\
  !*** ./src/style.css ***!
  \\\\***********************/
/*! exports provided: default */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
eval(\\"__webpack_require__.r(__webpack_exports__);
const styleSheet = new CSSStyleSheet(); styleSheet.replaceSync(\`.white-listed {
    background-color: white;
}
\`); /* harmony default export */ __webpack_exports__[\\\\\\"default\\\\\\"] = (styleSheet);
//# sourceURL=webpack:///./src/style.css?\\");

/***/ })

},[[\\"./src/index.js\\",\\"runtime\\"]]]);"
`;
